--- a/sequentialTestingApp.Rmd
+++ b/sequentialTestingApp.Rmd
@@ -502,7 +502,7 @@ output$adjBounds <- render_gt({
                contains("zscor") ~ px(70)
                ) %>% 
     cols_label(checkpoints = "",
-               maxSample = "(Max) Sample Size Per Variant",
+               maxSample = "Minimum Sample Size Per Variant",
                origZscors = "Old Boundary") %>%
     tab_options(
       container.height = 275,
@@ -533,10 +533,10 @@ output$checkpoint_reco <- renderUI({
 
   recommendation <- round(global_design$seqn/(input$traff/input$dayNum)/7)
   output_message <- div(id = "checkpoint_reco",
-      "1 checkpoint per week is a good rule of thumb. Based on expected duration,",
+      "One checkpoint per week is a good rule of thumb. Based on expected duration,",
       tags$b("we suggest ",
       recommendation,
-      "checpoints."
+      "checkpoints."
       )
       )  
  
@@ -1300,7 +1300,7 @@ plotOutput("boundPlot")
 
 Row {data-height=30}
 -----------------------------
-v3.1 - Thanks for using! For version history, to report bugs and submit feature requests [click here](https://github.com/alphanumerritt/sequential-test-app/issues){target="_blank"}.
+v3.2 - Thanks for using! For version history, to report bugs and submit feature requests [click here](https://github.com/alphanumerritt/sequential-test-app/issues){target="_blank"}.
 
 Row {data-height=80}
 -----------------------------
